--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
         <span class="hero-badge">Topic Cluster</span>
         <div class="hero-copy">
           <p class="hero-kicker">Pacific Island Stories</p>
-          <h2 class="hero-title">Khám phá văn hóa Thái Bình Dương</h2>
+          <h1 class="hero-title">Khám phá văn hóa Thái Bình Dương</h1>
           <p class="hero-subtitle">
             Chọn quốc gia trong từng vùng để xem mô tả Blog (metafield) và danh sách bài viết mới nhất.
           </p>
         </div>
 
         <div class="hero-actions">
-          <a class="btn-cta" href="#polynesia">Bắt đầu khám phá</a>
+          <a class="btn-cta" href="#polynesia">Go to Polynesia</a>
           <a class="btn-ghost" href="#melanesia">Xem Melanesia</a>
+          <a class="btn-ghost" href="#micronesia">Xem Micronesia</a>
         </div>
       </div>
     </div>
@@ -43,7 +44,7 @@
   <main class="container">
     <!-- Bên dưới hero: Tiêu đề Page + mô tả ngắn -->
     <header class="topic-header">
-      <h1>Culture of the Pacific</h1>
+      <h2>Culture of the Pacific</h2>
       <p class="main-intro">
         Hành trình khám phá di sản, tín ngưỡng và nghệ thuật của người dân hải đảo.
       </p>
